<resources>
    <string name="app_name">TennoSushi</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="sort_list">Sort List</string>
    <string name="noConnection_useCashe">There is no Internet connection! App is using local cashe.</string>
    <string name="button_undo">Undo</string>
    <string name="title_activity_maps">Where can we deliver your order?</string>
    <string name="delivery_option">Choose the shipping method</string>
    <string name="delivery_option_title">Delivery options</string>
    <string name="courier_delivery">Courier delivery</string>
    <string name="self_delivery">Self-delivery</string>
    <string name="address">Address</string>
    <string name="apartment_number">Apartment_number</string>
    <string name="porch_number">Porch number</string>
    <string name="telephone_number">Telephone number</string>
    <string name="order">Order</string>
    <string name="please_wait">Please, wait...</string>
    <string name="data_sending">Sending data...</string>
    <string name="cancel">Cancel</string>
    <string name="error_has_occured">Error has occured!</string>
    <string name="done">Done!</string>
    <string name="successful_order">Your order was successfully transferred to the queue!</string>
    <string name="ok">OK</string>
    <string name="communicate">Communicate</string>
    <string name="call_me">Call me</string>
    <string name="phone_number">Phone number</string>
    <string name="we_will_call_you">Leave your number, and we\'ll call you soon!</string>
    <string name="wait_for_call">Wait for the call, we\'ll call you soon!</string>
    <string name="unexcepted_error">An unexpected error has occurred!</string>
    <string name="oops">Oops...</string>
    <string name="not_started">Not started yet</string>
    <string name="cooking">Cooking...</string>
    <string name="courier_left">The courier delivers your order.</string>
    <string name="courier_arrives">The courier arrives!</string>
    <string name="order_status_was_changed">Status of order #%d was changed</string>
    <string name="current_status">Current status: %s</string>
    <string name="order_completed">Order is completed</string>
    <string name="enter_phone_number">Please enter your phone number!</string>
    <string name="incorrect_phone_number">Phone number format is incorrect!</string>
    <string name="enter_address">Please enter your address!</string>
    <string name="error">Error</string>
    <string name="enter_apartment_number">Please enter your apartment number!\nP.S. If you live in a private home, specify \"0\" instead of number.</string>
    <string name="incorrect_apartment_number">Apartment number is incorrect!</string>
    <string name="enter_porch_number">Please enter your porch number!\nP.S. If you live in a private home, specify \"0\" instead of number.</string>
    <string name="incorrect_porch_number">Porch number is incorrect!</string>
    <string name="my_orders">My orders</string>
    <string name="hello_world" translatable="false">Hello, World!</string>
    <string name="status">Status: %s</string>
    <string name="order_time">Order time: %s</string>
    <string name="confirm_your_choice">Confirm your choice</string>
    <string name="sure_cancel_order">Are you sure you want to cancel your order?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="its_been_time" translatable="false">(%s: %d)</string>
    <string name="hours_late">hours</string>
    <string name="minutes_late">minutes</string>
    <string name="seconds_late">seconds</string>
    <string name="days_late">days</string>
</resources>
