<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/radio_group_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_option" />

        <RadioButton
            android:id="@+id/courier_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/courier_delivery" />

        <RadioButton
            android:id="@+id/self_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_delivery" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/address_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/address_subcontainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="false"
                android:layout_toStartOf="@+id/set_on_map">

                <EditText
                    android:id="@+id/address_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/address"
                    android:inputType="textPostalAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/set_on_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/address"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_menu_mylocation" />

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/apartment_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/apartment_number_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apartment_number"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/porch_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/porch_number_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/porch_number"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/telephone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/telephone_number_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telephone_number"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!-- Контейнер нужен для возможности задания Visible (заменяется при создании карты) -->
    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/radio_group"
        android:layout_margin="10dp"
        android:visibility="gone">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/order"/>

</RelativeLayout>